--- a/contract_show_invoice/views/contract_view.xml
+++ b/contract_show_invoice/views/contract_view.xml
@@ -18,7 +18,7 @@
             <field name="model">account.analytic.account</field>
             <field name="inherit_id" ref="analytic.view_account_analytic_account_form" />
             <field name="arch" type="xml">
-                <xpath expr='//div[@name="buttons"]' position='inside'>
+                <xpath expr='//div[@name="button_box"]' position='inside'>
                     <button class="oe_stat_button" type="action" icon="fa-edit"
                         name="%(contract_show_invoice.act_analytic_invoices)d"
                         string="Invoices" help="Invoices related with this contract">
